[project]
name = "ai-toolkit"
version = "0.1.0"
description = "An example AI toolkit project."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["attrs>=26.1.0,<27.0.0", "python-dotenv>=1.2.2,<2.0.0"]

[project.optional-dependencies]
langchain = [
    "langchain-core>=1.4.7,<2.0.0",
]
adi = [
    "azure-ai-documentintelligence>=1.0.2,<2.0.0",
]

[dependency-groups]
dev = ["ruff>=0.15.17,<0.16.0", "ty>=0.0.49,<0.0.50"]
[tool.ruff.lint]
select = [
    "E",   # PyCodestyle errors
    "W",   # PyCodestyle warnings
    "F",   # PyFlakes
    "D",   # Docstrings
    "B",   # Bugbear
    "Q",   # Quotes
    "UP",  # PyUpgrade
    "I",   # isort
    "C4",  # Flake8-comprehensions
    "G",   # logging-format
    "ISC", # Implicit string concatenation
    "PIE", # flake8-pie
    "PLE", # Pylint errors
    "S",   # flake8-bandit
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow use of assert in tests

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
add-bounds = "major"
exclude-newer = "P3D"
